force-app/main/default/objects/Monthly_Budget__c/fields/Amount_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Amount_Occupied__c</fullName>
    <label>Amount Occupied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>