force-app/main/default/objects/Monthly_Budget__c/fields/Amount_Spent__c.field-meta.xml
<CustomField>
    <fullName>Amount_Spent__c</fullName>
    <label>Amount Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>