force-app/main/default/objects/Monthly_Budget__c/fields/Budget_Spent__c.field-meta.xml
<CustomField>
    <fullName>Budget_Spent__c</fullName>
    <formula>TEXT(Budgeted_Amount__c) +&apos;/&apos;+ TEXT(Amount_Spent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget/Spent</label>
    <type>Text</type>
</CustomField>