force-app/main/default/objects/Monthly_Budget__c/fields/Campaign_Budget__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Budget__c</fullName>
    <label>Campaign Budget</label>
    <referenceTo>Campaign_Budget__c</referenceTo>
    <relationshipLabel>Monthly Budget</relationshipLabel>
    <relationshipName>Monthly_Budget_Parent</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>