force-app/main/default/objects/Monthly_Budget__c/fields/ExteralId__c.field-meta.xml
<CustomField>
    <fullName>ExteralId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>年份+销售+月份</inlineHelpText>
    <label>ExteralId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>