force-app/main/default/objects/Monthly_Budget__c/fields/Month_Remaining_Budget__c.field-meta.xml
<CustomField>
    <fullName>Month_Remaining_Budget__c</fullName>
    <formula>Campaign_Budget__r.Budgeted_Amount__c -Campaign_Budget__r.Sum_Month_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Remaining Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>