force-app/main/default/objects/Monthly_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Budget__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Month__c</columns>
    <columns>Budgeted_Amount__c</columns>
    <columns>Amount_Spent__c</columns>
    <columns>Residual_Amount__c</columns>
    <columns>Amount_Occupied__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>